# squashfile

./: Cargo.toml  layout.txt
libsquash/: Cargo.toml
libsquash/src/: error.rs  fs.rs  lib.rs
libsquash/src/disk/: crypt.rs  crypto.rs  mod.rs  tests.rs  write.rs
pysquash/: Cargo.toml  pyproject.toml
pysquash/pysquash/: __init__.py
pysquash/src/: lib.rs
src/: fs.rs  lib.rs
src/disk/: mod.rs  tests.rs  write.rs
