[package]
name = "libsquash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1"
memchr = "2.5"
thiserror = "1.0"
clap = { version = "3.2", features = ["derive"] }
chacha20 = "0.9"
afl = { version = "*", optional = true }

[features]
fuzz = ["dep:afl"]

[[bin]]
name = "squashfuzz"
required-features = ["fuzz"]
