[package]
name = "libsquash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1"
memchr = "2.5"
thiserror = "1.0"
# For crypto
chacha20 = { version = "0.9", features = ["std"] }
# For CLI
clap = { version = "3.2", features = ["derive"] }
hex = "0.4"
# For fuzzing
afl = { version = "*", optional = true }

[features]
fuzz = ["dep:afl"]

[[bin]]
name = "squashfuzz"
required-features = ["fuzz"]
